--- a/src/main/java/app/Monolog.form
+++ b/src/main/java/app/Monolog.form
@@ -49,7 +49,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="dc4c7" class="app.DrawPanel">
+          <component id="dc4c7" class="app.DrawPanel" binding="drawPanel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="800" height="600"/>
